# fawaris-fastapi

./: .gitignore  README.md  pyproject.toml
fawaris_fastapi/: __init__.py  exception_handlers.py  exceptions.py  main.py  sep10.py  sep24.py  settings.py  tables.py  utils.py
fawaris_fastapi/scripts/: create_tables.py  task_all.py
gamma_fawaris/: db.sqlite3  main.py  sep10.py  sep24.py  tables.py
gamma_fawaris/scripts/: create_tables.py
